--- a/src/pages/dettaglio-inserzione/dettaglio-inserzione.scss
+++ b/src/pages/dettaglio-inserzione/dettaglio-inserzione.scss
@@ -1,17 +1,115 @@
 page-dettaglio-inserzione {
+    ion-content{
+        ion-list{
+            .info-card{
+                ion-title{
+                    font-size: 18px !important;
+                    color: black !important;
+                    margin: 5px !important;
+                    margin-left: 0 !important;
+                    margin-bottom: 0 !important;
+                }
+                .materiali{
+                    margin: 0 !important;
+                }
+            }
+            ion-card{
+                background: none !important;
+                ion-label{
+                    margin: 0 !important;
+                }
+                box-shadow: none !important;
+                border-bottom: 2px dotted rgb(255, 205, 112) !important;
+                padding-bottom: 5px !important;
+                h1{
+                    color: orangered !important;
+                    margin: 10px !important;
+                    margin-left: 0 !important;
+                    font-size: 14px !important;
+                }
+                p{
+                    color: grey !important;
+                    font-size: 12px !important;
+                    margin-bottom: 5px !important;
+                }
+            }
+            #inserzionista-card{
+                h2{
+                    text-align: center !important;
+                    margin: 0 !important;
+                    margin-bottom: 5px !important;
+                    font-size: 18px !important;
+                    color: black !important;
+                }
+                ion-label{
+                    text-align: center !important;
+
+                }
+                p{
+                    text-align: center !important;
+                }
+            }
+        }
+    }
+    ion-navbar{
+        #preferito-button{
+            position: absolute !important;
+            right: 15px !important;
+            top: 15px !important;
+            background: none !important;
+            box-shadow: none !important;
+            color: orange !important;
+            font-size: 20px !important;
+        }
+        ion-title{
+            text-overflow: ellipsis !important;
+            overflow: hidden !important;
+            white-space: nowrap !important;
+            max-width: 70% !important;
+            .toolbar-title{
+                padding: 0 !important;
+            }
+        }
+    }
     ion-slides{
+        .swiper-pagination-bullet{
+            background: orange !important;
+        }
+        .swiper-pagination-bullet-active{
+            background: orange !important;
+            opacity: 0.4 !important;
+            width: 2vh !important;
+            height: 2vh !important;
+        }
         height: 50% !important;
         ion-slide{
-            padding-right: 1vh !important;
-            padding-left: 1vh !important;
+            width: 100% !important;
         }
         .slide-image{
             margin: 0 !important;
             width: 100% !important;
-            height: 40vh !important;
+            height: 44.5vh !important;
             overflow: auto !important;
             background-position: center !important;
             background-size: 50vh !important;
+        }
+        
+    }
+    ::-webkit-scrollbar,
+    *::-webkit-scrollbar {
+        display: none;
+    }
+    ion-footer{
+        button{
+            margin: 5px !important;
+            width: calc(100% - 10px) !important;
+            ion-icon{
+                position: absolute !important;
+                right: 10px !important;
+                top: 10px !important;
+                font-size: 16px !important;
+                
+            }
         }
     }
 }
