--- a/src/pages/filtri/filtri.scss
+++ b/src/pages/filtri/filtri.scss
@@ -1,3 +1,59 @@
 page-filtri {
-
+    ion-navbar{
+        text-align: center !important;
+        font-size: 20px !important;
+        button{
+            left: 5px !important;
+            top: 7px !important;
+            position: absolute !important;
+            background: none !important;
+            color: black !important;
+            box-shadow: none !important;
+        }
+    }
+    ion-item{
+        background: none !important;
+        ion-select{
+            max-width: 100% !important;
+            width: 100% !important;
+            padding: 0 !important;
+            display: inline-block !important;
+            
+            .select-text{
+                width: 90% !important;
+                display: inline-block !important;
+            }
+            .select-icon{
+                width: 10% !important;
+                display: inline-block !important;
+            }
+        }
+        ion-toggle{
+            .toggle-icon{
+                background: rgb(255, 206, 115) !important;
+            }
+            .toggle-inner{
+                background: orange !important;
+            }
+        }
+    }
+    ion-label{
+        display: inline-block !important;
+        font-size: 18px !important;
+        margin-bottom: 0 !important;
+        margin-top: 10px !important;
+        color: grey !important;
+    }
+    ion-footer{
+        text-align: center !important;
+        button{
+            width: 96% !important;
+            margin-bottom: 7px !important;
+            min-height: 50px !important;
+            border-radius: 0 !important;
+        }
+    }
+    .scroll-content{
+        overflow-y: auto !important;
+    }
 }
