--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,13 +1,34 @@
 page-home {
+    ::-webkit-scrollbar,
+    *::-webkit-scrollbar {
+        display: none;
+    }
     .search-toolbar{
-        display: inline-block !important;
         ion-list{
             display: block !important;
             margin: 0 !important;
-            #menu-toggle-button, #searchbar-side-button{
-                display: 10% !important;
-                float: left !important;
+            ion-searchbar {
+                display: inline-block !important;
+                width: 70% !important;
                 margin: 0 !important;
+                top: 5px !important;
+            }
+            .searchbar-input{
+                box-shadow: none !important;
+                height: 70% !important;
+                background: rgb(255, 206, 115) !important;
+            }
+            .searchbar-search-icon{
+                top: 6px !important;
+            }
+            #menu-toggle-button, #searchbar-side-button{
+                display: inline-block !important;
+                margin: 0 !important;
+                width: 10% !important;
+                background: none !important;
+                box-shadow: none !important;
+                color: white !important;
+                font-size: 19px !important;
             }
         }
     }
@@ -15,33 +36,37 @@ page-home {
     .filter-toolbar{
         
         button{
-            width: 100% !important;
-            background: none !important;
-            color: black !important;
-            font-size: 20px !important;
-            border: none !important;
-            box-shadow: none !important;
+            width: 49% !important;
             margin: 0 !important;
-            padding: 0 !important;
-            padding-left: 0 !important;
-            ion-label{
-                text-transform: initial !important;
-                margin-right: 0 !important;
-                padding-left: 30px !important;
-            }
-            ion-icon{
-                margin-right: 10px !important;
-            }
+            box-shadow: none !important;
+            border-radius: 0 !important;
+            background: rgb(255, 206, 115) !important;
+            color: black !important;
+            display: inline-block !important;
         }
 
     }
-
+    .results-toolbar{
+        margin: 0 !important;
+        min-height: 20px !important;
+        
+        ion-label{
+            text-align: center !important;
+            margin: 0 !important;
+            padding-bottom: 7px !important;
+            color: white !important;
+        }
+    }
     ion-content{
+        .scroll-content{
+            padding-top: 10px !important;
+        }
         .inserzione-card{
-            width: 100% !important;
+            width: calc(100% - 20px) !important;
             box-shadow: none !important;
-            border-bottom: 1px solid red !important;
+            border-bottom: 2.5px dotted orange !important;
             margin-bottom: 25px !important;
+            background: none !important;
             ion-card-header{
                 padding: 0 !important;
                 .slide-image{
@@ -62,7 +87,8 @@ page-home {
                     font-size: 16px !important;
                 }
                 p{
-                    color: red !important;
+                    color: grey !important;
+                    font-size: 13px !important;
                 }
             }
         }
