--- a/src/pages/messaggi/messaggi.scss
+++ b/src/pages/messaggi/messaggi.scss
@@ -2,4 +2,48 @@ page-messaggi {
   .scroll-content{
     overflow-y: auto !important;
   }
+  ion-card{
+    ion-card-header{
+      h1{
+        font-size: 16px !important;
+        color: black !important;
+        font-weight: bold !important;
+      }
+      
+    }
+    p{
+      font-size: 13px !important;
+      overflow: hidden !important;
+      text-overflow: ellipsis !important;
+      white-space: nowrap !important;
+    }
+    box-shadow: 1px 1px 5px gray !important;
+  }
+  ion-item{
+    background: none !important;
+    padding: 0 !important;
+    .item-inner{
+      padding: 0 !important;
+    }
+  }
+  #no-preferiti-message{
+    text-align: center !important;
+    font-size: 16px !important;
+    position: absolute !important;
+    top: 47vh !important;
+}
+.img-card-no-preferiti{
+    position: absolute !important;
+    top: 15vh !important;
+    left: 13.5vh !important;
+    width: 30vh !important;
+    height: 30vh !important;
+    box-shadow: none !important;
+    margin: 0 !important;
+    background-position: center !important;
+    background-size: contain !important;
+    background-image: url("../../assets/imgs/craftaway_no_content.png");
+    background-color: transparent !important;
+
+}
 }
