--- a/src/pages/pubblica-inserzione/pubblica-inserzione.scss
+++ b/src/pages/pubblica-inserzione/pubblica-inserzione.scss
@@ -1,3 +1,13 @@
 page-pubblica-inserzione {
-
+    .test{
+        background-image: url(../../assets/imgs/craftaway_no_content.png) !important;
+        height: 20vh !important;
+        width: 20vh !important;
+        background-size: contain !important;
+        display: inline-block !important;
+    }
+    ion-card{
+        background: none !important;
+        box-shadow: none !important;
+    }
 }
